GNOME Bugzilla – Bug 769462
glcolorconvert: _get_n_textures: code should not be reached
Last modified: 2016-08-04 13:18:29 UTC
I'm reaching this assertion when running this validate scenario: "gst-validate-launcher -t validate.file.playback.change_state_intensive.rawaudioS32LE_prores_mov -nd" ERROR:gstglcolorconvert.c:1372:_get_n_textures: code should not be reached 0 0x00007fa877ea36f5 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
+ Trace 236504
commit 402ab38f07096a581a74bd340ea56dedc9bd13e9 Author: Matthew Waters <matthew@centricular.com> Date: Thu Aug 4 23:14:41 2016 +1000 glcolorconvert: add missing rgb16 and bgr16 video formats in switch Fixes an assertion that code should not be reached https://bugzilla.gnome.org/show_bug.cgi?id=769462